# Workspace-Estimator

./: .gitignore  .pre-commit-config.yaml  README.md  Workspace Estimator.html  ruff.toml
.github/: CODEOWNERS  dependabot.yml  repo_meta.yaml
.github/scripts/: test_get_coverage.py
.github/workflows/: we-all-ci.yml  we-bump-version.yml  we-linter.yml  we-package.yml  we-release-package.yml  we-test.yml
DBX/: README.md  Step By Step Guide.md  Workspace Estimator.ipynb  requirements.txt
DBX/workspace_estimator_package/: README.md  pyproject.toml  requirements.txt
DBX/workspace_estimator_package/src/workspace_estimator/: __init__.py  manager.py  mapping.py  sizing.py
DBX/workspace_estimator_package/src/workspace_estimator/exceptions/: no_cluster_events_error.py
DBX/workspace_estimator_package/src/workspace_estimator/utils/: util.py  util_file.py
DBX/workspace_estimator_package/tests/: test_util_file.py
DBX/workspace_extractor_package/: README.md  __version__.py  pyproject.toml  requirements.txt
DBX/workspace_extractor_package/src/workspace_extractor/: __init__.py  manager.py  mapping.py  sizing.py
DBX/workspace_extractor_package/src/workspace_extractor/utils/: util.py  util_file.py
DBX/workspace_extractor_package/tests/: .coveragerc  test_util_file.py
EMR/: README.md  emr_workspace_estimator.ipynb
EMR/ec2/: README.md  emr_ec2_estimator.ipynb
EMR/serverless/: README.md
Workspace Estimator EMR Serverless/: README.md
