[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Snowflake, Inc.", email = "snowflake-python-libraries-dl@snowflake.com"},
]
description = "Snowflake Wokspace Extractor is a Python package that provides a simple way to extract and analyze data from Snowflake workspaces. It allows users to retrieve metadata, query history, and other relevant information from their Snowflake workspaces, enabling better understanding and management of their data environment."
dynamic = ['version']
homepage = "https://www.snowflake.com/"
license = {text = "Apache License, Version 2.0"}
name = "snow-workspace-extractor"
readme = "README.md"
requires-python = '>=3.10'

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  'Intended Audience :: Education',
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

keywords = [
  'Snowflake',
  'Snowpark',
  'analytics',
  'cloud',
  'data',
  'data-analysis',
  'data-science',
  'data-engineering',
  'data-analytics',
  'data-visualization',
  'data-processing',
  'data-management',
  "workspace extractor",
  "we",
]

dependencies = [
  "tqdm==4.67.1",
  "requests==2.32.4",
  "pandas==2.2.3",
]

[project.optional-dependencies]
development = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "coverage>=7.6.7",
  "twine==6.2.0",
  "hatchling==1.25.0",
  "pre-commit>=4.0.1",
  "setuptools>=70.0.0",
  "deepdiff>=8.0.0",
]

[project.urls]
"Documentation" = "https://github.com/Snowflake-Labs/Workspace-Estimator/blob/main/README.md"
"Issues" = "https://github.com/Snowflake-Labs/Workspace-Estimator/issues"
"Source" = "https://github.com/Snowflake-Labs/Workspace-Estimator"

[tool.hatch.build]
sources = [
  "src",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
]

[tool.hatch.build.targets.wheel]
directory = "dist"
packages = [
  "src/workspace_extractor",
]

[tool.hatch.version]
path = "__version__.py"
pattern = '^__version__ = "(?P<version>.*)"'
source = "regex"

[[tool.hatch.sources]]
dir = "src"
name = "snow-workspace-extractor"
type = "package"

[tool.hatch.envs.linter.scripts]
check = [
  "echo 'Running linting checks...' && ruff check --config=../../ruff.toml --statistics --verbose . || (echo '❌ LINTING FAILED: Please fix the above linting issues before proceeding. Use \"ruff check --config=../ruff.toml --fix .\" to auto-fix some issues, or fix them manually.' && exit 1)",
]

[tool.hatch.envs.test.scripts]
check = [
  'python -m pip install --upgrade pip -q',
  'pip install -q -e .[development]',
  'pip list',
  'pytest -vvv --junitxml=tests/outcome/test-results.xml --cov=src --cov-branch --cov-config=tests/.coveragerc --cov-report=xml:tests/outcome/coverage-{matrix:python:{env:PYTHON_VERSION:unset}}.xml {args:tests} --cov-report=term --cov-report=html:tests/outcome/coverage-{matrix:python:{env:PYTHON_VERSION:unset}}.html --cov-report=json:tests/outcome/coverage-{matrix:python:{env:PYTHON_VERSION:unset}}.json',
]

coverage = [
  'cd tests/outcome && pwd && ls -la',
  'python ../../.github/scripts/test_get_coverage.py tests/outcome/coverage-{matrix:python:{env:PYTHON_VERSION:unset}}.json --threshold={env:COVERAGE_THRESHOLD}',
]
